--- a/index.html
+++ b/index.html
@@ -1,1 +1,334 @@
-Coming Soon!
+<!doctype html>
+<html>
+  <head>
+    <!-- enforce https -->
+    <script type="text/javascript">
+        var host = "yoursite.com";
+        if ((host == window.location.host) && (window.location.protocol != "https:"))
+            window.location.protocol = "https";
+    </script>
+
+    <meta charset="utf-8">
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <!-- metadata -->
+    <title>RIDDLE - API Docs</title>
+    <meta name="description" content="RIDDLE (Race and race Imputation from Disease history with Deep LEarning) is an open-source Python library for using deep learning to estimate race and ethnicity information in EMR datasets.">
+    <meta name="keywords" content="ML,DL,deep learning,machine learning,imputation,ethnicity,race,disease,medicine,clinical,biomedicine,epidemiology,computational biology,bioinformatics,biology,data,big data,AI">
+    <meta name="author" content="Ji-Sung Kim,Andrey Rzhetsky">
+    <link rel="canonical" href="https://riddle.ai">
+
+    <!-- Facebook Graph tags --> 
+    <meta property="og:url" content="https://riddle.ai" />
+    <meta property="og:site_name" content="riddle.ai" />
+    <meta property="og:title" content="RIDDLE | API Docs" />
+    <meta property="og:description" content="RIDDLE (Race and race Imputation from Disease history with Deep LEarning) is an open-source Python library for using deep learning to estimate race and ethnicity information in EMR datasets." />
+    <meta property="og:image" content="https://riddle.ai/img/graph.jpg" />
+
+    <!-- Google WebMaster -->
+    <meta name="google-site-verification" content="czmqX0P6QZpwEqsEn0_1LVDH9q3RdhArYbRbMD2v9lQ" />
+
+    <!-- favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="favicons/manifest.json">
+    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#781a3f">
+    <link rel="shortcut icon" href="favicons/favicon.ico">
+    <meta name="msapplication-config" content="favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+    <style>
+      .highlight table td { padding: 5px; }
+.highlight table pre { margin: 0; }
+.highlight, .highlight .w {
+  color: #f8f8f2;
+  background-color: #272822;
+}
+.highlight .err {
+  color: #272822;
+  background-color: #f92672;
+}
+.highlight .c, .highlight .cd, .highlight .cm, .highlight .c1, .highlight .cs {
+  color: #75715e;
+}
+.highlight .cp {
+  color: #f4bf75;
+}
+.highlight .nt {
+  color: #f4bf75;
+}
+.highlight .o, .highlight .ow {
+  color: #f8f8f2;
+}
+.highlight .p, .highlight .pi {
+  color: #f8f8f2;
+}
+.highlight .gi {
+  color: #a6e22e;
+}
+.highlight .gd {
+  color: #f92672;
+}
+.highlight .gh {
+  color: #66d9ef;
+  background-color: #272822;
+  font-weight: bold;
+}
+.highlight .k, .highlight .kn, .highlight .kp, .highlight .kr, .highlight .kv {
+  color: #ae81ff;
+}
+.highlight .kc {
+  color: #fd971f;
+}
+.highlight .kt {
+  color: #fd971f;
+}
+.highlight .kd {
+  color: #fd971f;
+}
+.highlight .s, .highlight .sb, .highlight .sc, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .sx, .highlight .s1 {
+  color: #a6e22e;
+}
+.highlight .sr {
+  color: #a1efe4;
+}
+.highlight .si {
+  color: #cc6633;
+}
+.highlight .se {
+  color: #cc6633;
+}
+.highlight .nn {
+  color: #f4bf75;
+}
+.highlight .nc {
+  color: #f4bf75;
+}
+.highlight .no {
+  color: #f4bf75;
+}
+.highlight .na {
+  color: #66d9ef;
+}
+.highlight .m, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mb, .highlight .mx {
+  color: #a6e22e;
+}
+.highlight .ss {
+  color: #a6e22e;
+}
+    </style>
+    <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/print.css" rel="stylesheet" media="print" />
+      <script src="javascripts/all.js"></script>
+  </head>
+
+  <body class="index" data-languages="[]">
+    <a href="#" id="nav-button">
+      <span>
+        NAV
+        <img src="img/navbar.png" alt="Navbar" />
+      </span>
+    </a>
+    <div class="tocify-wrapper">
+      <img src="img/logo_white.svg" alt="Logo white" />
+        <div class="search">
+          <input type="text" class="search" id="input-search" placeholder="Search">
+        </div>
+        <ul class="search-results"></ul>
+      <div id="toc">
+      </div>
+        <ul class="toc-footer">
+            <li><a href="https://github.com/jisungk/riddle"><img src="img/github.svg"></a></li>
+        </ul>
+    </div>
+    <div class="page-wrapper">
+      <div class="dark-box"></div>
+      <div class="content">
+        <h1 id="welcome-to-the-api-docs-for-riddle">Welcome to the API docs for RIDDLE!</h1>
+
+<blockquote>
+<p>Check version</p>
+</blockquote>
+<pre class="highlight python"><code><span class="kn">import</span> <span class="nn">riddle</span>
+</code></pre><pre class="highlight python"><code><span class="n">riddle</span><span class="o">.</span><span class="n">hello</span><span class="p">()</span>
+</code></pre><pre class="highlight plaintext"><code>  &gt; Hello, World
+</code></pre><pre class="highlight plaintext"><code>  &gt; My name is RIDDLE 1.0.0
+
+</code></pre>
+<p><strong>RIDDLE</strong> (<strong>R</strong>ace and ethnicity <strong>I</strong>mputation from <strong>D</strong>isease history with <strong>D</strong>eep <strong>LE</strong>arning) is an open-source Python2 library for using deep learning to impute race and ethnicity information in anonymized electronic medical records (EMRs). RIDDLE provides the ability to (1) build models for estimating race and ethnicity from clinical features, and (2) interpret trained models to describe how specific features contribute to predictions. The RIDDLE library implements the methods introduced in <a href="https://arxiv.org/abs/1707.01623">&ldquo;RIDDLE: Race and ethnicity Imputation from Disease history with Deep LEarning&rdquo;</a> (arXiv preprint, 2017).</p>
+
+<p>Compared to alternative methods (e.g., scikit-learn/Python, glm/R), RIDDLE is designed to handle large and high-dimensional datasets in a performant fashion. RIDDLE trains models efficiently by using a parallelized TensorFlow/Theano backend, and avoids memory overflow by preprocessing data in conjunction with batch-wise training.</p>
+
+<p>RIDDLE uses <a href="https://keras.io">Keras</a> to specify and train the underlying deep neural networks, and <a href="https://github.com/kundajelab/deeplift">DeepLIFT</a> to compute feature-to-class contribution scores. The current RIDDLE Python module works with both TensorFlow and Theno as the backend to Keras. The default architecture is a deep multi-layer perceptron (deep MLP) that takes binary-encoded features and targets. However, you can specify any neural network architecture (e.g., LSTM, CNN) and data format by writing your own <code class="prettyprint">model_module</code> files (see <a href="#configuration"><em>Configuration</em></a>)! </p>
+
+<h1 id="installation">Installation</h1>
+
+<blockquote>
+<p>Install dependencies</p>
+</blockquote>
+<pre class="highlight shell"><code><span class="c"># from GitHub</span>
+</code></pre><pre class="highlight shell"><code>pip install --upgrade --no-deps git+git://github.com/jisungk/riddle.git
+</code></pre><pre class="highlight shell"><code>pip install --upgrade --no-deps git+git://github.com/kundajelab/deeplift.git
+
+</code></pre><pre class="highlight shell"><code><span class="c"># TensorFlow (Python2)</span>
+</code></pre><pre class="highlight shell"><code>pip install --upgrade tensorflow
+
+</code></pre><pre class="highlight shell"><code><span class="c"># from pip</span>
+</code></pre><pre class="highlight shell"><code>pip install --upgrade keras
+</code></pre><pre class="highlight shell"><code>pip install --upgrade sklearn
+</code></pre><pre class="highlight shell"><code>pip install --upgrade numpy
+</code></pre><pre class="highlight shell"><code>pip install --upgrade scipy
+</code></pre><pre class="highlight shell"><code>pip install --upgrade matplotlib
+</code></pre><pre class="highlight shell"><code>pip install --upgrade h5py
+
+</code></pre><pre class="highlight shell"><code><span class="c"># from apt-get</span>
+</code></pre><pre class="highlight shell"><code>apt-get install libhdf5-serial-dev
+
+</code></pre>
+<h3 id="install-the-following-libraries-software">Install the following libraries/software:</h3>
+
+<ul>
+<li><strong>RIDDLE</strong> (<code class="prettyprint">riddle</code>, install from <a href="https://github.com/jisungk/riddle">GitHub</a>)</li>
+<li>DeepLIFT (<code class="prettyprint">deeplift</code>, install from <a href="https://github.com/kundajelab/deeplift">GitHub</a>)</li>
+<li>Keras (<code class="prettyprint">keras</code>)</li>
+<li>TensorFlow (<code class="prettyprint">tensorflow</code>)</li>
+<li>scikit-learn (<code class="prettyprint">sklearn</code>)</li>
+<li>NumPy (<code class="prettyprint">numpy</code>)</li>
+<li>SciPy (<code class="prettyprint">scipy</code>)</li>
+<li>Matplotlib (<code class="prettyprint">matplotlib</code>)</li>
+<li><p>h5py (<code class="prettyprint">h5py</code>)</p></li>
+<li><p>HDF5</p></li>
+</ul>
+
+<h3 id="configuration">Configuration</h3>
+
+<ul>
+<li><p><a href="https://keras.io/backend/">Change your Keras backend</a> to your choice of Theano or TensorFlow.</p></li>
+<li><p>Configure <code class="prettyprint">feature_importance.py</code> to point to the correct <code class="prettyprint">deeplift</code> directory.</p></li>
+<li><p>Modify <code class="prettyprint">pipeline.py</code> or <code class="prettyprint">kfold_pipeline.py</code> as needed (e.g., datapath variables).</p></li>
+<li><p>If desired, add your own custom <code class="prettyprint">model_module.py</code> and modify <code class="prettyprint">pipeline.py</code> or <code class="prettyprint">kfold_pipeline.py</code> accordingly. A <code class="prettyprint">model_module</code> file generally has <em>three</em> core functions:</p>
+
+<ul>
+<li><code class="prettyprint">create_base_model()</code> which returns a Sequential Keras model</li>
+<li><code class="prettyprint">process_X_data()</code> which processes (e.g., vectorizes) feature data</li>
+<li><code class="prettyprint">process_y_data()</code> which processes class data</li>
+</ul></li>
+</ul>
+
+<h1 id="high-level-api">High-level API</h1>
+
+<blockquote>
+<p>Typical workflow for a basic pipeline</p>
+</blockquote>
+<pre class="highlight python"><code><span class="kn">from</span> <span class="nn">riddle</span> <span class="kn">import</span> <span class="n">emr</span><span class="p">,</span> <span class="n">models</span>
+</code></pre><pre class="highlight python"><code><span class="c"># get data</span>
+</code></pre><pre class="highlight python"><code><span class="c"># perm_indices = shuffled list of indices</span>
+</code></pre><pre class="highlight python"><code><span class="n">data_partition_dict</span> <span class="o">=</span> <span class="n">emr</span><span class="o">.</span><span class="n">get_k_fold_partition</span><span class="p">(</span><span class="n">X</span><span class="p">,</span> <span class="n">y</span><span class="p">,</span> <span class="n">k_idx</span><span class="o">=</span><span class="n">k_idx</span><span class="p">,</span> <span class="n">k</span><span class="o">=</span><span class="n">k</span><span class="p">,</span> <span class="n">perm_indices</span><span class="o">=</span><span class="n">perm_indices</span><span class="p">)</span>
+</code></pre><pre class="highlight python"><code><span class="n">nb_features</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">idx_feat_dict</span><span class="p">)</span>
+</code></pre><pre class="highlight python"><code><span class="n">nb_classes</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">idx_class_dict</span><span class="p">)</span>
+</code></pre><pre class="highlight python"><code><span class="n">nb_cases</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">X</span><span class="p">)</span>
+
+</code></pre><pre class="highlight python"><code><span class="c"># specify data preprocessing functions &amp; model</span>
+</code></pre><pre class="highlight python"><code><span class="n">process_X_data_func</span> <span class="o">=</span> <span class="n">model_module</span><span class="o">.</span><span class="n">process_X_data</span>
+</code></pre><pre class="highlight python"><code><span class="n">process_X_data_func_args</span> <span class="o">=</span> <span class="p">{</span><span class="s">'nb_features'</span><span class="p">:</span> <span class="n">nb_features</span><span class="p">}</span>
+</code></pre><pre class="highlight python"><code><span class="n">process_y_data_func</span> <span class="o">=</span> <span class="n">model_module</span><span class="o">.</span><span class="n">process_y_data</span>
+</code></pre><pre class="highlight python"><code><span class="n">process_y_data_func_args</span> <span class="o">=</span> <span class="p">{</span><span class="s">'nb_classes'</span><span class="p">:</span> <span class="n">nb_classes</span><span class="p">}</span>
+</code></pre><pre class="highlight python"><code><span class="c"># best_model_param = dict of pre-selected model parameters</span>
+</code></pre><pre class="highlight python"><code><span class="n">model</span> <span class="o">=</span> <span class="n">model_module</span><span class="o">.</span><span class="n">create_base_model</span><span class="p">(</span><span class="n">nb_features</span><span class="o">=</span><span class="n">nb_features</span><span class="p">,</span> <span class="n">nb_classes</span><span class="o">=</span><span class="n">nb_classes</span><span class="p">,</span> <span class="o">**</span><span class="n">best_model_param</span><span class="p">)</span>
+
+</code></pre><pre class="highlight python"><code><span class="c"># train and test model</span>
+</code></pre><pre class="highlight python"><code><span class="n">model</span> <span class="o">=</span> <span class="n">models</span><span class="o">.</span><span class="n">train</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="n">X_train</span><span class="p">,</span> <span class="n">y_train</span><span class="p">,</span> <span class="n">X_val</span><span class="p">,</span> <span class="n">y_val</span><span class="p">,</span> <span class="n">process_X_data_func</span><span class="p">,</span> <span class="n">process_y_data_func</span><span class="p">,</span> <span class="n">nb_features</span><span class="o">=</span><span class="n">nb_features</span><span class="p">,</span> <span class="n">nb_classes</span><span class="o">=</span><span class="n">nb_classes</span><span class="p">,</span> <span class="n">process_X_data_func_args</span><span class="o">=</span><span class="n">process_X_data_func_args</span><span class="p">,</span> <span class="n">process_y_data_func_args</span><span class="o">=</span><span class="n">process_y_data_func_args</span><span class="p">,)</span>
+</code></pre><pre class="highlight python"><code><span class="p">(</span><span class="n">loss</span><span class="p">,</span> <span class="n">acc</span><span class="p">),</span> <span class="n">y_test_probas</span> <span class="o">=</span> <span class="n">models</span><span class="o">.</span><span class="n">test</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="n">X_test</span><span class="p">,</span> <span class="n">y_test</span><span class="p">,</span> <span class="n">process_X_data_func</span><span class="p">,</span> <span class="n">process_y_data_func</span><span class="p">,</span> <span class="n">nb_features</span><span class="o">=</span><span class="n">nb_features</span><span class="p">,</span>  <span class="n">nb_classes</span><span class="o">=</span><span class="n">nb_classes</span><span class="p">,</span> <span class="n">process_X_data_func_args</span><span class="o">=</span><span class="n">process_X_data_func_args</span><span class="p">,</span> <span class="n">process_y_data_func_args</span><span class="o">=</span><span class="n">process_y_data_func_args</span><span class="p">)</span>
+
+</code></pre>
+<h3 id="modules">Modules</h3>
+
+<table><thead>
+<tr>
+<th>Module</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code class="prettyprint">emr.py</code></td>
+<td>Reads in data files &amp; preprocesses the data.</td>
+</tr>
+<tr>
+<td><code class="prettyprint">feature_importance.py</code></td>
+<td>Computes &amp; summarizes DeepLIFT feature contribution scores</td>
+</tr>
+<tr>
+<td><code class="prettyprint">roc.py</code></td>
+<td>Computes and graphs ROC-AUC</td>
+</tr>
+<tr>
+<td><code class="prettyprint">utils.py</code></td>
+<td>Useful utilities</td>
+</tr>
+<tr>
+<td><code class="prettyprint">models/deep_mlp.py</code></td>
+<td>deep MLP architecture (in <code class="prettyprint">model_module</code> format)</td>
+</tr>
+<tr>
+<td><code class="prettyprint">models/model_utils.py</code></td>
+<td>Useful functions for DL models</td>
+</tr>
+</tbody></table>
+
+<aside class="success">
+Remember — you can use your own custom architecture files (e.g., CNNs, LSTMs) as long as they follow the <span style="font-family:monospace;">model_module</span> format (see <a href="#configuration"><em>Configuration</em></a>)
+</aside>
+
+<h3 id="scripts">Scripts</h3>
+
+<table><thead>
+<tr>
+<th>Script</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td><code class="prettyprint">pipeline.py</code></td>
+<td>Runs a single experimental pipeline</td>
+</tr>
+<tr>
+<td><code class="prettyprint">kfold_pipeline.py</code></td>
+<td>Runs multiple experiments using k-fold cross-validation</td>
+</tr>
+</tbody></table>
+
+<h1 id="authors">Authors</h1>
+
+<p><a href="http://jisungkim.com">Ji-Sung Kim</a><br>
+Princeton University<br>
+<em>jisungk (at) cs.princeton.edu</em></p>
+
+<p><a href="https://scholar.google.com/citations?user=HXCMYLsAAAAJ&amp;hl=en">Andrey Rzhetsky</a>, Edna K. Papazian Professor<br>
+University of Chicago<br>
+<em>andrey.rzhetsky (at) uchicago.edu</em></p>
+
+<h1 id="license-amp-attribution">License &amp; Attribution</h1>
+
+<p>All media (including but not limited to designs, images and logos) are copyrighted by Ji-Sung Kim (2017). </p>
+
+<p>Project code (explicitly excluding media) is licensed under the Apache License 2.0. If you would like use or modify this project or any code presented here, please include the <a href="https://github.com/jisungk/riddle/NOTICE">notice</a> and <a href="https://github.com/jisungk/riddle/LICENSE">license</a> files, and cite the <a href="https://arxiv.org/abs/1707.01623">manuscript</a>.</p>
+
+      </div>
+      <div class="dark-box">
+      </div>
+    </div>
+
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-76639340-4', 'auto');
+      ga('send', 'pageview');
+    </script>
+  </body>
+</html>
