Add GitHub star button
- top right

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         <img src="img/navbar.png" alt="Navbar" />
       </span>
     </a>
+
     <div class="tocify-wrapper">
       <img src="img/logo_white.svg" alt="Logo white" />
         <div class="search">
@@ -143,9 +144,11 @@
             <li><a href="https://github.com/jisungk/riddle"><img src="img/github.svg"></a></li>
         </ul>
     </div>
+
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
+
         <h1 id="welcome-to-the-api-docs-for-riddle">Welcome to the API docs for RIDDLE!</h1>
 
 <blockquote>
@@ -315,10 +318,19 @@ University of Chicago<br>
 
 <p>Project code (explicitly excluding media) is licensed under the Apache License 2.0. If you would like use or modify this project or any code presented here, please include the <a href="https://github.com/jisungk/riddle/NOTICE">notice</a> and <a href="https://github.com/jisungk/riddle/LICENSE">license</a> files, and cite the <a href="https://arxiv.org/abs/1707.01623">manuscript</a>.</p>
 
+
+        <!-- GitHub star button. -->
+        <div style="position:absolute;top:15px;right:15px;">
+          <a class="github-button" href="https://github.com/jisungk/riddle" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star jisungk/riddle on GitHub">Star</a>
+        </div>
+        
       </div>
       <div class="dark-box">
       </div>
     </div>
+
+    <!-- script for GitHub star button-->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     <!-- Google Analytics -->
     <script>
