Update email address

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ Remember — you can use your own custom architecture files (e.g., CNNs, LSTMs) 
 
 <p><a href="http://jisungkim.com">Ji-Sung Kim</a><br>
 Princeton University<br>
-<em>jisungk (at) cs.princeton.edu</em></p>
+<em>hello (at) jisungkim.com</em></p>
 
 <p><a href="https://scholar.google.com/citations?user=HXCMYLsAAAAJ&amp;hl=en">Andrey Rzhetsky</a>, Edna K. Papazian Professor<br>
 University of Chicago<br>
